2008-02-07  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: (ui_main_new), (ui_main_finalize): save the action
	group within the UiMainPrivate structure (to be able to enable and
	disable actions)

2008-02-07  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: (continue_game), (ui_main_new), (pause_game):
	prepared pause_game() for the usage with GtkActions; drop
	game_pause_cb() which was a wrapper - now the signatures are identical

2008-02-07  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: (ui_main_new), (new_1_player_game): prepared
	new_1_player_game() for the usage with GtkActions; drop game_new_cb()
	which was a wrapper - now the signatures are identical

2008-02-07  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: (ui_main_new), (new_network_game): prepared
	new_network_game() for the usage with GtkActions; drop game_join_cb()
	which was a wrapper - now the signatures are identical

2008-02-07  Sven Herzberg  <sven@imendio.com>

	* autogen.sh: manually run gnome-doc-prepare (as the gnome-autogen.sh
	rule "^GNOME_DOC_INIT" doesn't apply anymore); if that fails, create
	an empty one (for Maemo)

2008-02-07  Sven Herzberg  <sven@imendio.com>

	* data/monkey-bubble.glade: dropped the unused GtkMenu for the "Help"
	menu items

2008-02-07  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: (ui_main_new): create the menu for "Help" with the
	GtkUIManager

2008-02-07  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: (ui_main_new), (about), (show_help_content):
	changed signal handler prototypes to match the ones for the upcoming
	GtkAction* API (noone used the GtkMenuItem anyway)

2008-02-07  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: (ui_main_new): add a user interface to the
	GtkUIManager for the GNOME code

2008-02-07  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: (ui_main_new): provide the GtkActionGroup for the
	GNOME code, too

2008-02-07  Sven Herzberg  <sven@imendio.com>
